--- a/views/genre_delete.pug
+++ b/views/genre_delete.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
   h1 #{title}: #{genre.name}
-  p= author.lifespan
+  p= genre_list
   
   if author_books.length
   
@@ -10,7 +10,7 @@ block content
   
     div(style='margin-left:20px;margin-top:20px')
 
-      h4 Books
+      h4 Genre
     
       dl
       each book in author_books
@@ -19,7 +19,7 @@ block content
         dd #{genre.summary}
 
   else
-    p Do you really want to delete this Author?
+    p Do you really want to delete this Genre?
     
     form(method='POST' action='')
       div.form-group
